# DynamicArmorVariants

./: .gitmodules  Build.cmd  CMakeLists.txt  CMakePresets.json  README.md
src/main/: ConditionParser.cpp  ConfigLoader.cpp  DynamicArmorManager.cpp  SKSEPlugin.cpp
